# assignment8.1_1

./: .gitignore  CMakeLists.txt  main.cpp  sqlselectquery.cpp  sqlselectquery.h  sqlselectquerybuilder.cpp  sqlselectquerybuilder.h  studentstable.cpp  studentstable.h  testquery.h
